--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -1,8 +1,13 @@
-# Lifting state
+# Lifting state ✅
 
 ## 📝 Your Notes
 
 Elaborate on your learnings here in `src/exercise/03.md`
+
+- Lifting state up is pretty common practice and developers are generally pretty good at this
+- When it comes to pushing state back down we often get lazy and forget to do it because the behaviour of the component will be unaffected
+- Pushing state back down should occur when the state is only used in one child component and therefore it make sense for that once child component to manage the state
+  - This will be a benefit on performance (small or large) as changes to the child components state will not trigger rerenders of the parent component
 
 ## Background
 
