--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -1,4 +1,4 @@
-# useState: tic tac toe
+# useState: tic tac toe ✅
 
 ## 📝 Your Notes
 
@@ -51,7 +51,7 @@ also be determined based on the value of `squares` and we've provided a
 📜 Read more about derived state in
 [Don't Sync State. Derive It!](https://kentcdodds.com/blog/dont-sync-state-derive-it)
 
-### Alternate:
+### Alternate
 
 If you'd prefer to practice refactoring a class that does this to a hook, then
 you can open `src/exercise/04-classes.js` and open that on
